feat: add read business txn api
